# finance-fusion

./: .gitignore  .prettierrc.json  Cargo.toml  Dockerfile  README.md  diesel.toml  package-lock.json  rust-toolchain.toml
migrations/2024-12-16-043906_initial_schema/: down.sql  up.sql
src/: errors.rs  lib.rs  main.rs  rest.rs  schema.rs
src/api/: api.rs
src/config/: config.rs
src/database/: connection.rs  db.rs  mod.rs  schema.rs  sessions.rs  user.rs  users.rs
src/database/models/: mod.rs  plans.rs  users.rs
src/database/models/sessions/: claims.rs  manager.rs  mod.rs
src/middleware/: auth.rs
src/routes/: auth.rs  mod.rs  plans.rs  users.rs  vitals.rs
src/utils/: serialization.rs
