[package]
name = "finance-fusion-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
clap = { version = "4.5.7", features = ["derive"] }
git-version = "0.3.9"
tokio = { version = "1.38.0", features= ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "openapi_extensions"] }
utoipa-swagger-ui =  { version = "7.1.0", features = ["axum"] }

[profile.coverage]
inherits = "dev"
incremental = false

[dev-dependencies]
http-body-util = "0.1.2"
hyper = "1.3.1"
tower = "0.4.13"
