[package]
name = "finance-fusion-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
bcrypt = "0.15.1"
bson = "2.11.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive"] }
diesel = { version = "2.2.1", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
git-version = "0.3.9"
jsonwebtoken = "9.3.0"
serde = "1.0.203"
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features= ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "openapi_extensions"] }
utoipa-swagger-ui =  { version = "7.1.0", features = ["axum"] }

[profile.coverage]
inherits = "dev"
incremental = false

[dev-dependencies]
http-body-util = "0.1.2"
hyper = "1.3.1"
tower = "0.4.13"
